[package]
name = "just-ping"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0", features = ["ws"] }
axum-server = { version = "0", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
futures = "0"
